run ruff only on pre-commit and remove pylint and black

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ dependencies = [
     "matplotlib",
 ]
 
-[project.optional-dependencies]
-dev = ["pylint", "black"]
-
 [project.scripts]
 randomfpl = "randomfpl:main"
+
+[tool.pytest.ini_options]
+asyncio_mode = "strict"
+asyncio_default_fixture_loop_scope = "function"
