--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ randomfpl = "randomfpl:main"
 [tool.pytest.ini_options]
 asyncio_mode = "strict"
 asyncio_default_fixture_loop_scope = "function"
+
+[project.optional-dependencies]
+dev = ["pytest"]
